force-app/main/default/objects/Case_Media_Line__c/Case_Media_Line__c.object-meta.xml
<CustomObject>
    <description>One requested media item on a Branding &amp; Marketing Asset Inventory Management case - media type, sub type and quantity. A case can carry several lines, which flat Asset_1..5 fields could not represent.</description>
    <label>Case Media Line</label>
    <nameField>
        <displayFormat>CML-{00000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Media Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>