force-app/main/default/objects/Case_Media_Line__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>Media Lines</relationshipLabel>
    <relationshipName>Media_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>