force-app/main/default/objects/Case_Media_Line__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>Download URL of the photo captured for this media item when the case was raised. Copied onto the Branding Asset created from this line.</description>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>