force-app/main/default/objects/Case_Media_Line__c/fields/Media_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Sub_Type__c</fullName>
    <label>Media Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>