force-app/main/default/objects/Case_Media_Line__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <description>Renders the photo captured for this media item.</description>
    <formula>IF( Image_URL__c != null ,(IMAGE(Image_URL__c , &apos;Item Photo&apos;, 200, 200)) ,&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo</label>
    <type>Text</type>
</CustomField>